<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.docencia.ejemplo1.es.tta.example.MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuario" />
        <EditText
            android:id="@+id/nombreUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/dni_usuario"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contrasena" />
        <EditText
            android:id="@+id/claveUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pwd"
            android:inputType="textPassword"/>
    </GridLayout>

    <Button
        android:id="@+id/botonAcceso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acceder"
        />

</LinearLayout>
