<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.docencia.ejemplo1.es.tta.example.MainActivity">

    <TextView
        android:id="@+id/bienvenidaUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:gravity="center" />

    <Button
        android:id="@+id/botonTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opcion_nuevo_test"
        android:onClick="test"
        />
    <Button
        android:id="@+id/botonEjercicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opcion_nuevo_ejercicio"
        />
    <Button
        android:id="@+id/botonSeguimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opcion_seguimiento"
        />

</LinearLayout>
