<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_test"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.docencia.ejemplo1.es.tta.example.activity_test">

    <TextView
        android:id="@+id/preguntaTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pregunta"/>
    <RadioGroup
        android:id="@+id/opcionesTest"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </RadioGroup>

    <Button
        android:id="@+id/botonEnviarRespuestaTest"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botonEnviar"
        android:onClick="send"/>

    <Button
        android:id="@+id/botonAyuda"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botonAyuda" />


</LinearLayout>
